# BUPT-client

./: BUPT_Client.pro  CMakeLists.txt  README.md  dialog.cpp  dialog.h  jiaowu.cpp  jiaowu.h  mainwindow.cpp  mainwindow.h
src/: flashviewer.cpp  flashviewer.h  main.cpp  mainwindow.cpp  mainwindow.h
